--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@
         <servlet-name>ConsultaGrupoTrabajoServlet</servlet-name>
         <servlet-class>com.mycompany.proyecto01prograiv.presentation.ConsultaGrupoTrabajoServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DesasignarServlet</servlet-name>
+        <servlet-class>com.mycompany.proyecto01prograiv.presentation.DesasignarServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>Controller</servlet-name>
         <url-pattern>/Controller</url-pattern>
@@ -47,6 +51,10 @@
     <servlet-mapping>
         <servlet-name>ConsultaGrupoTrabajoServlet</servlet-name>
         <url-pattern>/ConsultaGrupoTrabajoServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DesasignarServlet</servlet-name>
+        <url-pattern>/DesasignarServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
